[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/other/countdown_clock.gd" type="Script" id=1]

[node name="Root" type="Node2D"]
position = Vector2( 160, 96 )
rotation = 1.5708
scale = Vector2( -1, 1 )
script = ExtResource( 1 )

[node name="ClockBack" type="Polygon2D" parent="."]
color = Color( 0.960784, 0.960784, 0.960784, 1 )
antialiased = true

[node name="ClockTime" type="Polygon2D" parent="."]
color = Color( 0.662745, 0.188235, 0, 1 )
antialiased = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
